--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",
       "target": "es5",
       "lib": ["es6", "dom"],
+      "resolveJsonModule": true,
       "sourceMap": true,
       "allowJs": true,
       "moduleResolution": "node",
