--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/jest": "^27.5.2",
         "@types/node": "^16.11.41",
         "@types/uuid": "^8.3.4",
+        "cyrillic-to-translit-js": "^3.2.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-markdown": "^2.2.1",
         "mobx": "^6.6.0",
@@ -52,6 +53,7 @@
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@babel/runtime": "^7.18.6",
+        "@types/form-serialize": "^0.7.2",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
