--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@craco/craco": "^6.4.5",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "@material-ui/core": "^4.12.4",
@@ -14,6 +15,7 @@
         "@types/jest": "^27.5.2",
         "@types/node": "^16.11.41",
         "@types/uuid": "^8.3.4",
+        "bootstrap": "^5.2.0",
         "cyrillic-to-translit-js": "^3.2.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-markdown": "^2.2.1",
@@ -30,8 +32,6 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build-dev": "dotenv -e .env.development react-app-rewired build",
-        "build-prod": "dotenv -e .env.production react-app-rewired build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
