--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject",
         "lint": "eslint . --ext .ts"
     },
@@ -62,8 +62,10 @@
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
         "babel-loader": "^8.2.5",
+        "craco-alias": "^3.0.1",
         "eslint": "^8.19.0",
         "eslint-config-airbnb": "^19.0.4",
+        "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
